--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,5 @@ ADD_SUBDIRECTORY(comm-protocols ${Fossilizid_bin_path}/comm-protocols)
 ADD_SUBDIRECTORY(pool ${Fossilizid_bin_path}/pool)
 ADD_SUBDIRECTORY(remote-queue ${Fossilizid_bin_path}/remote-queue)
 ADD_SUBDIRECTORY(container ${Fossilizid_bin_path}/container)
+ADD_SUBDIRECTORY(reduce-rpc ${Fossilizid_bin_path}/reduce-rpc)
 ADD_SUBDIRECTORY(third_party ${Fossilizid_bin_path}/third_party)
