--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,5 @@ ADD_SUBDIRECTORY(pool ${Fossilizid_bin_path}/pool)
 ADD_SUBDIRECTORY(remote-queue ${Fossilizid_bin_path}/remote-queue)
 ADD_SUBDIRECTORY(container ${Fossilizid_bin_path}/container)
 ADD_SUBDIRECTORY(reduce-rpc ${Fossilizid_bin_path}/reduce-rpc)
+ADD_SUBDIRECTORY(test ${Fossilizid_bin_path}/test)
 ADD_SUBDIRECTORY(third_party ${Fossilizid_bin_path}/third_party)
