--- a/reduce-rpc/CMakeLists.txt
+++ b/reduce-rpc/CMakeLists.txt
@@ -1,16 +1,6 @@
 PROJECT(reduce-rpc)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
 
-AUX_SOURCE_DIRECTORY(. DIR_SRC)
 
-SET(header_files
-    service.h
-    session.h
-    remote_obj.h
-)
-
-SET(SRC_LIST 
-    ${DIR_SRC}
-)
-
-ADD_LIBRARY(reduce-rpc ${SRC_LIST} ${header_files})
+ADD_SUBDIRECTORY(interface)
+ADD_SUBDIRECTORY(service)
