--- a/reliably- transmission/CMakeLists.txt
+++ b/reliably- transmission/CMakeLists.txt
@@ -1,16 +1,19 @@
-PROJECT(comm-protocols)
+PROJECT(reliably- transmission)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
 
 AUX_SOURCE_DIRECTORY(. DIR_SRC)
 
 SET(header_files
-    enumtype.h
-    mempool.h
-    networkobj.h
+    UDPBase.h
+    UDPClient.h
+    UDPConnect.h
+    UDPReliableProtocol.h
+    UDPService.h
+    UDPSession.h
 )
 
 SET(SRC_LIST 
     ${DIR_SRC}
 )
 
-ADD_LIBRARY(comm-protocols ${SRC_LIST} ${header_files})
+ADD_LIBRARY(reliably- transmission ${SRC_LIST} ${header_files})
